Fixed mobile horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,7 @@
   }
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
